# nufmt

./: .nufmt.example.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  treefmt.toml
.github/workflows/: ci.yml  docs.yml
crates/nufmt/: Cargo.toml
crates/nufmt-cli/: Cargo.toml
crates/nufmt-cli/src/: main.rs
crates/nufmt-core/: Cargo.toml
crates/nufmt-core/src/: config.rs  format.rs  lib.rs
crates/nufmt-core/src/format/: closure.rs  delim.rs  error.rs  mod.rs  string.rs  token.rs
crates/nufmt-core/tests/: fixtures.rs
crates/nufmt-core/tests/fixtures/: blocks.expected.nu  comments.nu  comments_only.expected.nu  complex.expected.nu  unicode.expected.nu  unicode.nu
crates/nufmt/src/: config.rs  format.rs  lib.rs
crates/nufmt/tests/: fixtures.rs
crates/nufmt/tests/fixtures/: blocks.expected.nu  blocks.nu  comments.expected.nu  complex.expected.nu  complex.nu  deeply_nested.expected.nu  deeply_nested.nu  simple.expected.nu  simple.nu  unicode.expected.nu  variables.nu
examples/: test_comment.rs
ref/: improvements.md  nu_scripts_audit.md  plan.md
