[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/psychollama/nufmt"
keywords = ["nushell", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
nu-cmd-lang = "0.105"
nu-command = "0.105"
nu-parser = "0.105"
nu-protocol = "0.105"
nufmt = { path = "crates/nufmt" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# nu-parser brings in multiple versions of dependencies
multiple_crate_versions = "allow"
