[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/psychollama/nufmt"
keywords = ["nushell", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
miette = "7"
nu-cmd-lang = "0.109"
nu-command = "0.109"
nu-parser = "0.109"
nu-protocol = "0.109"
nufmt-core = { path = "crates/nufmt-core" }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# nu-parser brings in multiple versions of dependencies
multiple_crate_versions = "allow"
