[package]
name = "nufmt-cli"
description = "A code formatter for Nushell"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nufmt"
path = "src/main.rs"

[dependencies]
clap.workspace = true
glob.workspace = true
nufmt-core.workspace = true
owo-colors = "4.2.3"
rayon.workspace = true
serde.workspace = true
similar = "2.7.0"
thiserror = "2.0.17"
toml.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
