[package]
name = "nufmt-core"
description = "Nushell code formatting library"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
cli = ["clap"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
miette.workspace = true
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-parser.workspace = true
nu-protocol.workspace = true
pretty.workspace = true
serde.workspace = true
thiserror = "2.0.17"

[lints]
workspace = true
