[package]
name = "nufmt"
description = "Nushell code formatting library"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-parser.workspace = true
nu-protocol.workspace = true
serde.workspace = true

[lints]
workspace = true
